30 Aug 2003 mipsator
 * added VARNAME in CHECK_BINARY to specify alternate storage variable.

28 Aug 2003 mipsator
 * added missing checks.
 * style.

23 Aug 2003 mipsator
 * added switches support.
 * update man pages about switches.

# PMK 0.6 released

23 Aug 2003 mipsator
 * changes for 0.6 release.

# snapshot 0.5.6

22 Aug 2003 mipsator
 * misc fixes

# snapshot 0.5.5

21 Aug 2003 mipsator
 * changed type of DEPEND, it must be a list now.
 * LIST in TARGET command is now of the list type.
 * allow use of lists in pmkscan data file.
 * added code to set the language of a check in pmkscan.
 * updated pmkfile.5 man page.
 * added arguments to pmkscan (-v -h and optional path).
 * added pmkscan.1 man page.

20 Aug 2003 mipsator
 * added hash_add_array_adv() in hash.
 * add support for isblank() in compat.

18 Aug 2003 mipsator
 * added po_get_str() and po_get_list in pmk_obj.

17 Aug 2003 mipsator
 * fixed a small bug in depend_check().
 * finished parser improvement for list parsing.

16 Aug 2003 mipsator
 * added po_dup() in pmk_obj.

15 Aug 2003 mipsator
 * added po_append() to pmk_obj.
 * adapted solution of dynarray to hash functions.
 * sync with new hash functions.

14 Aug 2003 mipsator
 * found a better solution to handle structure freeing in dynarray.
 * reversed changes relative to use of pmk objects with dynarray.

13 Aug 2003 mipsator
 * more (disabled) stuff for list support.

12 Aug 2003 mipsator
 * renamed pmk objects function in the same style as hash and dynarray.
 * misc renaming into sources.
 * switch dynarray to use pmk objects.
 * added preliminary support for list in parser.

11 Aug 2003 mipsator
 * added pmk objects.
 * added pmk object support in hash.
 * added pmk object support in dynarray.
 * changes to use pmk objects with hast tables.
 * removed incorrect code in pmksetup and added use of get_line.

# snapshot 0.5.4

09 Aug 2003 mipsator
 * more stuff in pmkfile man page.
 * some changes in pmkscan data file.