@@ -1,5 +1,6 @@
 30 Aug 2003 mipsator
  * added VARNAME in CHECK_BINARY to specify alternate storage variable.
+ * fixed deinstall target in Makefile.
 
 28 Aug 2003 mipsator
  * added missing checks.
